Revise as Omnibus project